# nclogger

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  build.zig
cmake/: ncloggerConfig.cmake  version.hpp.in
docs/: Doxyfile  conf.py
docs/pages/: basic_concepts.dox  mainpage.dox
examples/ex1/: CMakeLists.txt  main.cpp
include/nclogger/: canvas.hpp  help_manager.hpp  knobs.hpp  line.hpp  line_db.hpp  logger.hpp  screen.hpp  screen_manager.hpp  text_block.hpp  to_string.hpp  watch.hpp  watch_manager.hpp
src/: canvas.cpp  help_manager.cpp  line.cpp  line_db.cpp  logger.cpp  screen.cpp  screen_manager.cpp  text_block.cpp  watch.cpp  watch_manager.cpp
src/adhoc-tests/: main-line.cpp  main.cpp  main_line_db.cpp
